# check_in_service

./: .env.docker  .env.example  .gitignore  .stylelintrc.json  Dockerfile  README.md  __init__.py  alembic.ini  auth.py  components.json  database.py  docker-compose.yml  eslint.config.mjs  models.py  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  schemas.py  tailwind.config.js
app/: __init__.py  alembic.ini  app.py  config.py  database.py  endpoints.py  enums.py  globals.css  keycloak_utils.py  layout.tsx  main.py  minio_utils.py  models.py  page.tsx  requirements.txt  schemas.py  seed.py
app/alembic/: env.py
app/api/: query-client.ts
app/contants/: index.ts
app/crud/: endpoints.py
app/dashboard/: layout.tsx  page.tsx
app/database/: config.py  database.py  enums.py  external_db.py  init.py  init.sql  models.py  schemas.py
app/login/: page.tsx
app/models/: __init__.py  attendance.py  attendances.py  base.py  enums.py  group.py  groups.py  lessons.py  personal_info.py  qr_code.py  reasons.py  starosta.py  student.py  teacher.py  user.py  user_groups.py  users.py
app/providers/: query-provider-wrapper.tsx  session-provider-wrapper.tsx
app/routes/: __init__.py  attendance.py  auth.py  dean.py
app/schemas/: attendances.py  groups.py  lessons.py  reasons.py  user_groups.py  users.py
app/settings/: config.py
app/tests/: test_auth.py
components/: missed-reason-panel.tsx  sidebar.tsx  top-navbar.tsx
lib/: auth.ts
routes/: attendance.py  auth.py  dean.py  root.py
src/: App.jsx  index.css  main.jsx  styles.css
(+56 files in other folders)
