[tool.poetry]
name = "check_in"
version = "0.1.0"
description = "Attendance check-in system"
authors = ["Your Name <your.email@example.com>"]
package-mode = false  # Добавлено для отключения упаковки

[tool.poetry.dependencies]
python = "^3.13"
aiofiles = "^23.2.1"
alembic = "^1.16.1"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
asyncpg = "^0.30.0"
certifi = "^2025.6.15"
click = "^8.2.1"
colorama = "^0.4.6"
fastapi = "^0.115.13"
greenlet = "^3.2.3"
h11 = "^0.16.0"
httpcore = "^1.0.9"
httpx = "^0.27.2"
idna = "^3.10"
Mako = "^1.3.10"
MarkupSafe = "^3.0.2"
minio = "^7.2.15"
pydantic = "^2.11.7"
pydantic_core = "^2.33.2"
python-dotenv = "^1.1.0"
python-keycloak = "^2.16.6"
sniffio = "^1.3.1"
SQLAlchemy = "^2.0.41"
starlette = "^0.46.2"
typing-inspection = "^0.4.1"
typing_extensions = "^4.14.0"
uvicorn = "^0.34.3"
pytz = "^2025.2"
pydantic-settings = "^2.10.0"

[tool.poetry.group.dev.dependencies]
black = "^21.12b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"